--- a/12.25.md
+++ b/12.25.md
@@ -10,12 +10,12 @@
 | 2020 | Pison       | VLDB         |                                                     | off               |                                   |
 | 2019 | JPStream    | ASPLOS       |                                                     | on                |                                   |
 | 2019 | simdjson    | VLDB         |                                                     |                   |                                   |
-| 2019 | FishStore   | SIGMOD       |                                                     | on                |                                   |
-| 2018 | Sparser     | VLDB         |                                                     |                   |                                   |
-| 2018 | Faster      | SIGMOD       |                                                     | on                |                                   |
-| 2018 | VXQuery     | EDBT(B)      |                                                     | on                |                                   |
-| 2017 | **Mison**   | VLDB         |                                                     |                   |                                   |
-| 2014 | SQL/JSON    | SIGMOD       |                                                     | on                |                                   |
+| 2019 | FishStore   | SIGMOD       |                                                     | on                |Mison、Fishstore-RJ|
+| 2018 | Sparser     | VLDB         |                                                     |                   |RapidJSON、Mison|
+| 2018 | Faster      | SIGMOD       |                                                     | on                |     |
+| 2018 | VXQuery     | EDBT(B)      |                                                     | on                |MongoDB、AsterixDB|
+| 2017 | **Mison**   | VLDB         |                                                     |                   |Gson、Jackson、RapidJson|
+| 2014 | SQL/JSON    | SIGMOD       |                                                     | on                |SQL/JSON的Oracle RDBMS、Argo/SQL|
 | 2014 | Sinew       | SIGMOD       |一些NoSQL数据库系统支持可以分析存储数据的原语<br>但为了发出SQL查询，用户必须预先定义一个模式 | 整体架构很清晰，采用了物理列/虚拟列转换的思路，偏移量表示属性<br>对多层嵌套处理乏力|MongoDB, a JSON extension of Postgres, RDBMS|
 | 2013 | Argo        | WebDB(C)     |基于传统RDBMS，添加了一层JSON映射与查询语句Argo/SQL     | 将JSON转换为三元组和三张表<br>思路简单，不考虑多层JSON嵌套，可参考性一般|PostgreSQL, MongoDB, MySQL|
 | 2012 | NoDB        | VLDB         |提出缩短从数据到查询的时间                             | 将数据处理从DBMS的思路拉出来<br>过于久远，无需对比                  | MySQL等DBMS                        | https://github.com/HBPMedical/PostgresRAW
@@ -31,14 +31,17 @@ NoDB    -->Mison;
 Argo    -->Mison;
 Sinew   -->Mison;
 SQL/JSON-->Mison;
+NoDB    -->VXQuery;
+Argo    -->VXQuery;
+Sinew   -->VXQuery;
+SQL/JSON-->VXQuery;
 Mison-->JSONTiles
 Mison-->JEDI
 Mison-->JPStream-->Pison-->JSONSki
 Mison-->simdjson
 Mison-->FishStore
 Mison-->Sparser
-Mison-->Faster
-Mison-->VXQuery
+Faster-->FishStore
 
 SQL+model-->hadoop+model-->streamingModel
 hadoop+model-->structModel
@@ -97,3 +100,78 @@ $\color{red}{提供的功能}$
 ## JSON Data Management – Supporting Schema-less Development in RDBMS --2014
 * challenge：传统的RDBMS平台要求数据模式完整可存储、可查询和可索引，需要将面向模式的开发风格放宽，以支持无模式的开发风格。
 * 
+
+## Mison: A Fast JSON Parser for Data Analytics
+* 应用场景：大多数Web应用程序(如Twitter和Facebook)，企业应用程序的无模式数据交换格式
+    * Mison提到Jackson和Gson基于有限状态机FSM，Mison基于推测和数据并行算法
+* challenge：JSON被解析并以二进制格式加载之后才能分析，这一长串步骤成为了限制JSON解析速度的瓶颈。
+* $\color{blue}{从Mison开始，在此之前的文章对比实验均采用NoSQL，在此之后的文章基本对比JSON专用解析器。}$
+    * 分析原因如下：
+        * JSON解析器如fastjson等已经成熟化，并被广泛使用
+        * Json path query思路的提出，由社区提出并逐渐成为主流之一，文章可以关注如何query，而无需实现crud所有操作
+    $\color{blue}{因此将Mison排列到了中心的位置，认为从这篇文章开启了新的思路}$
+* 系统架构
+![GitHub Logo](/12.25/mison2.jpg)
+* 并行算法
+    * SIMD指令集
+    * 位并行与`popcnt`，`popcnt`指计算当前的位图中1的个数
+    ![GitHub Logo](/12.25/mison1.jpg)
+* Msion试图在原数据格式下以跳跃的形式进行数据查询
+    * 分层冒号位图
+    * 但是
+<center class = "half">
+<img src = "/12.25/mison3.jpg"  width = "50%" align = left><img src = "/12.25/mison4.jpg"  width = "50%" align = right>
+</center>
+
+
+* 实验安排
+    * JSON数据预加载至主存，排除IO
+    * 数据集：twitter、yelp、github
+    * 实验场景：1、吞吐量(Parsing speed)--8种示例查询  2、多个root字段下的吞吐变化  3、过滤器的开销  4、推测的开销  5、Spark+Mison vs Spark+Parquet vs Spark+Jackson 的TPCH测试
+
+* 局限场景：数据集均小于3GB，内存占用没提及，没有实现并行
+
+## Faster: A Concurrent Key-Value Store with In-Place Updates
+* 应用场景：云上数据密集型应用程序
+* challenge：1、超过主存容量  2、更新强度大  3、时间局部性大，热数据  4、点操作多  5、分析可读性
+* 
+
+## Filter Before You Parse: Faster Analytics on Raw Data with Sparser
+* 研究背景：原位查询，基于FSM的传统解析器RapidJSON，基于SIMD查找特殊字符的Mison，观察到单核扫描JSON数据的原始字节流的速度(20GB/s)比Mison解析的速度(2GB/s)快10倍，分析得到40%的Spark查询选择不到20%的记录
+![GitHub Logo](/12.25/sparser1.jpg)
+* challenge：1、RF效率  2、RF级联  关注于Parser的部分
+* 缺陷：1、字母大小写的实现是否存在一定问题，先将目标文本全部转成小写以实现不区分大小写的搜索  2、不支持科学计数法  3、不支持具有编码相同数值的不同字符串表示形式的值
+* 处理的格式：1、支持整数相等查询  2、支持对任何字符进行Unicode转义
+
+* 实验安排：
+    * 数据集：twitter、censys、Bro IDS Logs(ASCII)、Packet Captures(binary)
+    * 实验场景：1、end-to-end(include IO)  2、TPC-H Queries  3、不同层数RF间的性能差距
+
+* 优势：可应用于JSON、二进制、ASCII多种数据形式
+* 局限场景：对JSON格式的探究还不够彻底，单核
+
+## FishStore: Faster Ingestion with Subset Hashing
+* 应用场景：临时分析查询、重复相同查询、点查找查询、流式查询
+* challenge：1、Mison、Sparser的跳跃式查找不满足遍历构建索引的需求  2、RocksDB、Bw-Tree构建索引的速度太慢  3、FASTER只解决了点查找的问题  4、支持PSF并发快速索引、按需索引需要边界、无锁的数据ingestion、减少散列链随机IO
+* 文章工作
+![GitHub Logo](/12.25/fish1.jpg)
+![GitHub Logo](/12.25/fish2.jpg)
+![GitHub Logo](/12.25/fish3.jpg)
+* 实验安排：
+    * 数据集：Github、Twitter、Yelp
+    * 实验安排：1、解析阶段对比  2、可扩展性对比  3、磁盘带宽占用率对比  4、CPU breakdown  5、PSF数量的影响  6、自适应预取、内存预算、
+    * RapidJson对整个记录解析，且在线程扩展时会为文档结构构件发出过多的内存分配，从而产生可扩展性瓶颈
+
+* 缺陷：1、可扩展性单线程1GB/s，32线程16GB/s  2、受到JSON深度的影响极大，层数加深吞吐以倍数递减
+* 优势：按需建索引的思路，不关注查询
+
+## Parsing Gigabytes of JSON per Second
+* 应用场景：
+
+## Scalable Processing of Contemporary Semi-Structured Data on Commodity Parallel Processors – A Compilation-based Approach
+* 应用场景：云计算场景
+* challenge：1、预处理成本  2、序列依赖性
+* 
+
+1、具体的应用场景
+2、方法最大的亮点，资源利用？优点结合？想达到什么的目的
