--- a/12.25.md
+++ b/12.25.md
@@ -173,5 +173,10 @@ $\color{red}{提供的功能}$
 * challenge：1、预处理成本  2、序列依赖性
 * 
 
+## JEDI: These aren't the JSON documents you're looking for...
+* 应用场景：网络爬虫从多个来源收集JSON格式的电影，并将它们保存在文档存储中，为了避免重复条目，爬虫查询数据库是否已存在要插入的电影，此时，键名或结构不同但代表同一个电影，此时精确查询失效
+![GitHub Logo](/12.25/jedi1.jpg)
+* challenge：
+
 1、具体的应用场景
 2、方法最大的亮点，资源利用？优点结合？想达到什么的目的
